# teste_fastapi

./: README.md  history.txt  main.py  pyproject.toml
.github/actions/pull-request-merge/: action.yaml
.github/workflows/: cicd.yaml  merge-to-main.yaml
src/: api.py
tests/: test_api.py
