[tool.poetry]
name = "teste-fastapi"
version = "0.1.0"
description = ""
authors = ["Horacio Biancardi  <50308943+HoracioBiancardi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
